[package]
name = "string-reader"
version = "0.1.1"
description = "Readers for &str and String instead of [u8]."
license = "MIT"
homepage = "https://github.com/FyraLabs/string-reader"
repository = "https://github.com/FyraLabs/string-reader"
readme = "README.md"
edition = "2021"
keywords = ["read", "string", "reader", "str"]
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
